--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3786,5 +3786,85 @@
                 "type": "String"
             }
         }
+    },
+    "cookie_consent_banner_title": "Your Privacy",
+    "@cookie_consent_banner_title": {
+        "description": "Title of the cookie consent banner"
+    },
+    "cookie_consent_banner_description": "We use cookies and similar technologies to provide and improve our website. Some are necessary for functionality, others help us analyze errors and optimize the website.",
+    "@cookie_consent_banner_description": {
+        "description": "Description in the cookie consent banner"
+    },
+    "cookie_consent_banner_accept_all": "Accept all",
+    "@cookie_consent_banner_accept_all": {
+        "description": "Button text for 'Accept all cookies'"
+    },
+    "cookie_consent_banner_reject_all": "Only necessary",
+    "@cookie_consent_banner_reject_all": {
+        "description": "Button text for 'Only necessary cookies'"
+    },
+    "cookie_consent_banner_customize": "Customize",
+    "@cookie_consent_banner_customize": {
+        "description": "Button text for 'Customize cookie settings'"
+    },
+    "cookie_consent_settings_title": "Cookie Settings",
+    "@cookie_consent_settings_title": {
+        "description": "Title of the cookie settings dialog"
+    },
+    "cookie_consent_settings_description": "Here you can customize your cookie preferences. Necessary cookies are always active and cannot be disabled.",
+    "@cookie_consent_settings_description": {
+        "description": "Description in the cookie settings dialog"
+    },
+    "cookie_consent_settings_save": "Save settings",
+    "@cookie_consent_settings_save": {
+        "description": "Button text to save cookie settings"
+    },
+    "cookie_consent_settings_cancel": "Cancel",
+    "@cookie_consent_settings_cancel": {
+        "description": "Button text to cancel cookie settings"
+    },
+    "cookie_consent_category_necessary_title": "Necessary",
+    "@cookie_consent_category_necessary_title": {
+        "description": "Title of the 'Necessary cookies' category"
+    },
+    "cookie_consent_category_necessary_description": "These cookies are required for the basic functions of the website, such as login, data storage and security. They cannot be disabled.",
+    "@cookie_consent_category_necessary_description": {
+        "description": "Description of the 'Necessary cookies' category"
+    },
+    "cookie_consent_category_necessary_services": "Firebase Authentication, Firestore, Cloud Functions, Storage, AppCheck",
+    "@cookie_consent_category_necessary_services": {
+        "description": "List of services in the 'Necessary cookies' category"
+    },
+    "cookie_consent_category_statistics_title": "Statistics",
+    "@cookie_consent_category_statistics_title": {
+        "description": "Title of the 'Statistics cookies' category"
+    },
+    "cookie_consent_category_statistics_description": "These cookies help us identify errors and improve the website. Technical error information is collected.",
+    "@cookie_consent_category_statistics_description": {
+        "description": "Description of the 'Statistics cookies' category"
+    },
+    "cookie_consent_category_statistics_services": "Sentry error tracking",
+    "@cookie_consent_category_statistics_services": {
+        "description": "List of services in the 'Statistics cookies' category"
+    },
+    "cookie_consent_settings_button": "Cookie Settings",
+    "@cookie_consent_settings_button": {
+        "description": "Button text to open cookie settings"
+    },
+    "cookie_consent_save_success": "Your cookie settings have been saved",
+    "@cookie_consent_save_success": {
+        "description": "Success message after saving cookie settings"
+    },
+    "cookie_consent_save_error": "Error saving cookie settings",
+    "@cookie_consent_save_error": {
+        "description": "Error message when saving cookie settings"
+    },
+    "cookie_consent_always_active": "Always active",
+    "@cookie_consent_always_active": {
+        "description": "Label for cookies that are always active"
+    },
+    "cookie_consent_privacy_policy": "Privacy Policy",
+    "@cookie_consent_privacy_policy": {
+        "description": "Link text to privacy policy"
     }
 }
