--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -3726,6 +3726,50 @@
     "@admin_area_template_manager_success_message": {
         "description": "Erfolgsmeldung nach Template-Upload im Admin Area beim Pagebuilder Section Template Upload"
     },
+    "admin_area_template_manager_tab_create": "Template erstellen",
+    "@admin_area_template_manager_tab_create": {
+        "description": "Tab-Label für Template erstellen im Admin Area Template Manager"
+    },
+    "admin_area_template_manager_tab_edit": "Templates bearbeiten",
+    "@admin_area_template_manager_tab_edit": {
+        "description": "Tab-Label für Templates bearbeiten im Admin Area Template Manager"
+    },
+    "admin_area_template_manager_edit_dialog_title": "Template bearbeiten",
+    "@admin_area_template_manager_edit_dialog_title": {
+        "description": "Dialog-Titel für Template bearbeiten im Admin Area"
+    },
+    "admin_area_template_manager_edit_success": "Template erfolgreich aktualisiert!",
+    "@admin_area_template_manager_edit_success": {
+        "description": "Erfolgsmeldung nach Template-Edit im Admin Area"
+    },
+    "admin_area_template_manager_edit_button": "Template aktualisieren",
+    "@admin_area_template_manager_edit_button": {
+        "description": "Button-Text für Template aktualisieren im Admin Area"
+    },
+    "admin_area_template_manager_edit_loading": "Templates werden geladen...",
+    "@admin_area_template_manager_edit_loading": {
+        "description": "Ladetext beim Laden der Templates im Admin Area"
+    },
+    "admin_area_template_manager_edit_no_templates": "Keine Templates vorhanden",
+    "@admin_area_template_manager_edit_no_templates": {
+        "description": "Text wenn keine Templates vorhanden sind im Admin Area"
+    },
+    "admin_area_template_manager_json_format_tooltip": "JSON formatieren",
+    "@admin_area_template_manager_json_format_tooltip": {
+        "description": "Tooltip für den JSON formatieren Button im Template Editor"
+    },
+    "admin_area_template_manager_json_upload_tooltip": "JSON-Datei hochladen",
+    "@admin_area_template_manager_json_upload_tooltip": {
+        "description": "Tooltip für den JSON-Datei hochladen Button im Template Editor"
+    },
+    "admin_area_template_manager_json_invalid": "Ungültiges JSON-Format",
+    "@admin_area_template_manager_json_invalid": {
+        "description": "Fehlermeldung bei ungültigem JSON-Format im Template Editor"
+    },
+    "admin_area_template_manager_new_assets_label": "Neue Assets",
+    "@admin_area_template_manager_new_assets_label": {
+        "description": "Label für neue Assets Section im Template Editor"
+    },
     "menuitems_templates": "Templates",
     "@menuitems_templates": {
         "description": "Menüeintrag für Templates im Admin Area"
